# AdaptNet

./: .gitignore  LICENSE  README.md  map.html  pyproject.toml
adaptnet_webmap/: data_downloader.py  data_processor.py  main.py  map_builder.py  map_layer_creator.py  styles.py  utilities.py
css/: const.css  darkmode.css  general.css  interface.css  popup.css  search_bar.css  tooltip.css
js/: baseLayerSwitcher.js  contentHandler.js  dataProvider.js  languageHandler.js  layerControl.js  legendBuilder.js  main.js  styleManager.js  utilities.js
templates/: interface.html  popup.html
tests/: test_data_downloader.py  test_data_processor.py
