[tool.poetry]
name = "adaptnet-webmap"
version = "0.1.0"
description = ""
authors = ["Philipp Paul Köhn <153257079+PhilippKoehn-a@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
folium = "^0.19.5"
pytest = "^8.3.5"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
aiohttp = "^3.11.14"
matplotlib = "^3.10.1"

[tool.poetry.scripts]
adaptnet = "adaptnet_webmap.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
